force-app/main/default/objects/fields/Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Id__c</fullName>
    <description>Specific ContentVersionId sent for signing. Pinned at request time so version drift does not affect what the signer sees.</description>
    <label>Content Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>