force-app/main/default/objects/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <description>Salesforce ContentDocumentId of the document to be signed. Accepts any ContentDocument — not tied to any specific system.</description>
    <label>Document Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>