force-app/main/default/objects/fields/Is_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this request as a test record created by Apex test classes or sandbox testing. Used to filter test data from production reports and schedulers.</description>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>