force-app/main/default/objects/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <description>Email address the signing request was sent to. Stored normalised (lowercase, trimmed) at creation time.</description>
    <label>Recipient Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>