force-app/main/default/objects/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>Display name of the signing recipient. Used in email templates and the signing page header.</description>
    <label>Recipient Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>