force-app/main/default/objects/fields/Related_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Object_Type__c</fullName>
    <description>API name of the SObject referenced by Related_Record_Id__c (e.g., Opportunity, Account, Case). Stored so the UI can construct navigation links without a describe call.</description>
    <label>Related Object Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>