force-app/main/default/objects/fields/Reminder_Sent_Count__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_Count__c</fullName>
    <description>Number of reminder emails sent for this request. Used to enforce a maximum reminder cap and prevent email flooding.</description>
    <defaultValue>0</defaultValue>
    <label>Reminder Sent Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>