force-app/main/default/objects/fields/Signature_Type__c.field-meta.xml
<CustomField>
    <fullName>Signature_Type__c</fullName>
    <description>Method used by the signer: Draw (canvas), Type (rendered font), or Upload (image file).</description>
    <label>Signature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draw</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>