force-app/main/default/objects/fields/Signed_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Signed_Document_Id__c</fullName>
    <description>ContentDocumentId of the new signed document version generated after signing. The original document is never modified.</description>
    <label>Signed Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>