force-app/main/default/objects/fields/Signer_Email__c.field-meta.xml
<CustomField>
    <fullName>Signer_Email__c</fullName>
    <description>Email captured at the time of signing. May differ from Recipient_Email if the link was forwarded. Stored for legal audit purposes.</description>
    <label>Signer Email</label>
    <type>Email</type>
</CustomField>